# dimensionality

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
biology/BrainScore/: on_Majaj.ipynb
biology/BrainScore/.ipynb_checkpoints/: on_Majaj-checkpoint.ipynb
examples/: demo.ipynb  synthetic.py
intrinsic/: Final_dim.ipynb
legacy/biology/: on_Stringer.ipynb  on_TVSD.ipynb
legacy/biology/.ipynb_checkpoints/: on_Stringer-checkpoint.ipynb  on_TVSD-checkpoint.ipynb
legacy/biology/BrainScore/: Compare_all_DiCarlo.ipynb  Get_DiCarlo_Data_and_Save.ipynb  dicarlo_data2.npz
legacy/biology/BrainScore/.ipynb_checkpoints/: Get_DiCarlo_Data_and_Save-checkpoint.ipynb
legacy/intrinsic/: nonlin_manifold.ipynb
legacy/intrinsic/.ipynb_checkpoints/: Final_dim-checkpoint.ipynb  nonlin_manifold-checkpoint.ipynb
legacy/synthetic/.ipynb_checkpoints/: Linear_example-checkpoint.ipynb
src/dimensionality/: __init__.py  _core.py  estimators.py  finite.py  plot.py  sweep.py
synthetic/: Linear_example.ipynb
tests/: test_estimators.py
